# homestead-client

./: .dir-locals.el  Cargo.toml  Embed.toml  README  memory.x  notes.org
.cargo/: config.toml
src/: main.rs
