[package]
name = "homestead-client"
authors = ["Alec Cox"]
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dns", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.1.0" }
cyw43 = { features = ["defmt", "firmware-logs"] }
cyw43-pio = { features = ["defmt", "overclock"] }

# ???
defmt = "0.3.6"
defmt-rtt = "0.4"
fixed = "1.25.1"
fixed-macro = "1.2.0"

cortex-m = { version = "=0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = { version = "0.8", features = ["serde"] }
usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

# begin non-bsp stuff
# this could be useful for processing http requests and responses, however this doesn't
# currently have anything for generating http requests and responses
# httparse = { version = "1.8.0", default-features = false }

# waveshare display
epd-waveshare = { version = "0.5.0", features = ["graphics"] }
# splashscreen
tinybmp = "0.4.0"

# http client library
reqwless = { version = "0.11.0" , features = ["defmt"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.1", features = ["defmt"] }

[patch.crates-io]

embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }

cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "715b6d52e08944665728eed160a8408a8fbc4570" }

epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "a083583441c166d07edaf2a6b5a31d025f45c483" }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core", rev = "9327a14e74ad3b4fd37a9ac34e72b61aa5fcc9bf" }

[profile.dev]
debug = true
lto = true

[profile.release]
debug = false
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
